--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXTAUTH_SECRET="chickenclassic"
 NEXTAUTH_URL="http://localhost:3000" 
+DATABASE_URL="postgres://neondb_owner:X3EH0MnykPgz@ep-muddy-heart-a7naroyn-pooler.ap-southeast-2.aws.neon.tech/neondb?sslmode=require"
