Updated direct connection parameters

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXTAUTH_SECRET="chickenclassic"
 NEXTAUTH_URL="http://localhost:3000" 
-DATABASE_URL="postgresql://username:password@host:port/database?schema=public"
+DATABASE_URL="postgres://neondb_owner:X3EH0MnykPgz@ep-muddy-heart-a7naroyn-pooler.ap-southeast-2.aws.neon.tech/neondb?sslmode=require"
+POSTGRES_URL_NON_POOLING="postgresql://neondb_owner:X3EH0MnykPgz@ep-muddy-heart-a7naroyn-pooler.ap-southeast-2.aws.neon.tech/neondb?sslmode=require"
