--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^4.x.x",
-    "prisma": "^4.x.x",
     "@auth/prisma-adapter": "^2.7.4",
+    "@prisma/client": "^4.x.x",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.464.0",
     "next": "14.2.16",
     "next-auth": "^4.24.11",
+    "prisma": "^4.x.x",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.0.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
